<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/dialogRoot">

    <LinearLayout
        android:background="@drawable/confirm_dialog_bg"
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_title"
            android:textColor="#aaaaaa"
            android:textSize="11dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/appliction_desc"
            android:textColor="@color/colorAccent"
            android:textSize="11dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/appliction_name"
            android:textAlignment="center"
            android:textColor="#332200"
            android:textSize="36dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="11dp"
            android:text="@string/appliction_author" />

        <LinearLayout
            android:gravity="bottom"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="50"
                android:layout_height="wrap_content">

                <Switch
                    android:id="@+id/transparent_ui"
                    android:switchPadding="6dp"
                    android:padding="0dp"
                    android:textColor="#888"
                    android:textSize="12sp"
                    android:text="@string/transparent_ui"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:paddingBottom="4dp"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="50"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/author_name"
                    android:textAlignment="textEnd"
                    android:textColor="#aaaaaa"
                    android:textSize="11dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/engine_version_name"
                    android:textAlignment="textEnd"
                    android:textColor="#aaaaaa"
                    android:textSize="11dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
