<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splash_bg_color"
    android:backgroundTintMode="screen"
    android:clipToPadding="true"
    android:fitsSystemWindows="false">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginStart="20sp" android:layout_marginTop="35sp">
        <TextView
                android:id="@+id/start_state_text"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_gravity="center"
                android:minLines="8"
                android:text="@string/pop_before_start"
                android:textColor="#AE009688"
                android:textSize="13sp"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/start_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

        <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@mipmap/ic_launcher"/>
        <Space
                android:layout_width="match_parent"
                android:layout_height="150sp"/>

    </LinearLayout>
    <LinearLayout
            android:gravity="bottom"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:textSize="25sp"
                android:textColor="@color/colorAccent"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/starting_title" android:textStyle="bold"/>
        <TextView
                android:textSize="15sp"
                android:textColor="@color/colorAccent"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:text="@string/starting_subtitle" />
    </LinearLayout>
</FrameLayout>